// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter 1`] = `
<div>
  <h1>
    Dan_23
  </h1>
  <h1>
    23
  </h1>
  <button
    data-test="decrease"
  >
    decrement
  </button>
  <button
    data-test="increase"
  >
    increase
  </button>
</div>
`;

exports[`Counter 2`] = `
<div>
  <h1>
    Dan_24
  </h1>
  <h1>
    24
  </h1>
  <button
    data-test="decrease"
  >
    decrement
  </button>
  <button
    data-test="increase"
  >
    increase
  </button>
</div>
`;
